# opencv-with-vulkan

./: .gitignore  CMakeLists.txt  README.md  deviceConfig.ini  glu_plain_time.ignore.txt  mkpack.py  run.bat  run.sh  shader-compile.py  test.py  vulkanExtensions.ini  vulkanExtensionsDefault.ini  vulkanLayers.ini
defaultVS/: screenRect.spv  screenRect.vert
examples/deferredRednering/: main.cpp
examples/lab1/2/: main.cpp
examples/lab1/3/: main.cpp
examples/lab10/1/: main.cpp
examples/lab11/1/: main.cpp
examples/lab11_Laplacian_blending/1/: main.cpp
examples/lab13/1/: main.cpp
examples/lab13_Guided_Linear_Upsampling/1/: main.cpp
examples/lab13_Guided_Linear_Upsampling/2/: main.cpp  test.py
examples/lab1_basic_opencv/1/: main.cpp
examples/lab2/1/: main.cpp
examples/lab2/2/: main.cpp
examples/lab2/2-1/: main.cpp
examples/lab2_shader_on_cpu/1/: main.cpp
examples/lab2_shader_on_cpu/2-1/: main.cpp
examples/lab3/1/: main.cpp
examples/lab3/2/: main.cpp
examples/lab3_first_with_vulkan/1/: main.cpp
examples/lab4/1/: main.cpp
examples/lab4/2/: main.cpp
examples/lab5/1/: main.cpp
examples/lab5/3/: main.cpp
examples/lab5_filter_with_GPU/2/: main.cpp
examples/lab5_filter_with_GPU/3/: main.cpp
examples/lab6/1/: main.cpp
examples/lab6/2/: main.cpp
examples/lab6/3/: main.cpp
examples/lab6_BilateralFiltering_and_shader_toys/1/: main.cpp
examples/lab6_BilateralFiltering_and_shader_toys/4/: main.cpp
examples/lab7/1/: main.cpp
examples/lab7/2/: main.cpp
examples/lab7_euqalizeHist_and_shader_toys/2/: main.cpp
examples/lab8/1/: main.cpp
examples/lab8/3/: main.cpp
examples/lab8_sdf_gen_and_shader_toys/1/: main.cpp
examples/lab8_sdf_gen_and_shader_toys/2/: main.cpp
examples/lab9/1/: main.cpp
examples/lab9_canny/1/: main.cpp
images/: Bricks.png~  Cells.png~  Duk-noise.xcf  abbbg.jpg~  bb.png~  dd.png~
include/: configMgr.hpp  genVecMask.py  glslStyle.hpp  helper.h  iphelper.hpp  lab1.h  shader.h
include/vk/: gpuBuf.h  gpuMat.h  gpuMem.h  gpuTrans.h  imageHelper.h  stage.h  vkHelper.h  vkenv.h  vkinfo.h
lab1/1/: main.cpp
lab1/2/: main.cpp
lab1/3/: main.cpp
lab2/1/: main.cpp
lab2/2/: main.cpp
lab2/2-1/: main.cpp
lab3/1/: main.cpp
lab3/2/: main.cpp
lab4/1/: main.cpp
lab4/2/: main.cpp
lab5/1/: main.cpp
lab5/2/: main.cpp
lab5/3/: main.cpp
lab6/1/: main.cpp
lab6/2/: main.cpp
lab6/3/: main.cpp
shaderLib/: templateEnd.frag.glsl  templateHead.frag.glsl
shaders/: bilateralFilter.frag  bilateralFilter.spv  bilateralFiltering.frag  bilateralFiltering.spv  blit.frag  blit.spv  blur.frag  blur.spv  distorting.frag  distorting.spv  equalizeHist.frag  equalizeHist.spv  glu_downsample.frag  glu_downsample.spv  glu_index_weight.frag  glu_index_weight.spv  glu_upsample.frag  glu_upsample.spv  glu_weight_only.frag  glu_weight_only.spv  meanFilterWithIntegral.frag  meanFilterWithIntegral.spv  normalMap.frag  normalMap.spv  scaleVideo.frag  scaleVideo.spv  sdf.frag  sdf.spv  sdf2dlight.frag  sdf2dlight.spv  test.glsl
shaders/Distrct13Final/: blockFresh.frag  blockFresh.spv  funclib.frag.glsl  main.frag  main.spv  show.frag  show.spv  skybox.frag  skybox.spv
shaders/ghostHead/: mainImage.frag  mainImage.spv
shaders/sweetHeart/: kit.frag.glsl  sweetHear.frag  sweetHear.spv
shaders/waveWater/: bufferA.frag  bufferA.spv  bufferB.frag  bufferB.spv  bufferC.frag  bufferC.spv  common.frag.glsl  execute.frag.glsl  funcs.frag.glsl  image.frag  image.spv
src/: helper.cpp  lab1.cpp  shader.cpp
src/vk/: gpuBuf.cpp  gpuMat.cpp  gpuMem.cpp  gpuTrans.cpp  imageHelper.cpp  stage.cpp  vkHelper.cpp  vkenv.cpp
submitPack/: genVecMask.py  helper.h  shader.cpp  shader.h
